--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "babel-cli": "^6.26.0",
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
+        "babel-polyfill": "^6.26.0",
         "babel-preset-env": "^1.7.0",
         "webpack": "^4.12.0",
         "webpack-cli": "^3.0.8",
